# grow-controller

./: ads1115.py  config.py  config.yaml  log.py  main.py  pyproject.toml
grow/: log.py  logic.py  main.py  util.py
grow/devices/: __init__.py  ads1115.py  base.py  dht22.py  relay.py
inputs/: __init__.py  base.py  dht22.py
old/: config copy.yaml  controller.py  dht.py  importtest.py  oldman.py  relay.py  test.yaml
old/tests/: dht.py  pip3.list  relay.py  relay2.py  relay3.py  sudopip3.list
outputs/: __init__.py  base.py  relay.py
tests/: test_grow.py
